--- a/.github/workflows/docker-hub-ci.yml
+++ b/.github/workflows/docker-hub-ci.yml
@@ -77,6 +77,8 @@ jobs:
             --arg COGNITO_DOMAIN "${{ secrets.COGNITO_DOMAIN }}" \
             --arg APP_BASE_URL "${{ secrets.APP_BASE_URL }}" \
             --arg VERSION_STRING "${{ secrets.VERSION_STRING }}" \
+            --arg REDIS_ENDPOINT "${{secrets.REDIS_ENDPOINT}}" \
+            --arg REDIS_PORT "${{secrets.REDIS_PORT}}" \
           '
           .taskDefinition
           | .containerDefinitions[0].image = $IMAGE_URI
@@ -88,7 +90,9 @@ jobs:
                         .name != "COGNITO_APP_CLIENT_SECRET" and
                         .name != "COGNITO_DOMAIN" and
                         .name != "APP_BASE_URL" and
-                        .name != "VERSION_STRING"
+                        .name != "VERSION_STRING" and
+                        .name != "REDIS_ENDPOINT" and
+                        .name != "REDIS_PORT"
               ))
               + [
                   {name: "COGNITO_REGION", value: $COGNITO_REGION},
@@ -98,7 +102,9 @@ jobs:
                   {name: "COGNITO_APP_CLIENT_SECRET", value: $COGNITO_APP_CLIENT_SECRET},
                   {name: "COGNITO_DOMAIN", value: $COGNITO_DOMAIN},
                   {name: "APP_BASE_URL", value: $APP_BASE_URL},
-                  {name: "VERSION_STRING", value: $VERSION_STRING}
+                  {name: "VERSION_STRING", value: $VERSION_STRING},
+                  {name: "REDIS_ENDPOINT", value: $REDIS_ENDPOINT},
+                  {name: "REDIS_PORT", value: $REDIS_PORT}
                 ]
           )
           | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy, .tags)
