--- a/src/api/.env,example
+++ b/src/api/.env,example
@@ -11,3 +11,5 @@ VERSION_STRING=v1.3.0
 # Environment variables (from ECS Task Definition)
 REDIS_ENDPOINT = host.docker.internal # redis   # !! not localhost
 REDIS_PORT = 6379
+
+BUCKET_NAME=btap-app-test3-dev-tgw-3-btap-v1-uploads 
