--- a/input/input_config_midrise_toronto.yml
+++ b/input/input_config_midrise_toronto.yml
@@ -20,16 +20,16 @@ simulation_end_date: '12-31'
 
 # Energy files for MidriseApartment - Toronto
 energy_trained_model_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/energy/model_training/trained_model_gb.joblib'
-energy_ohe_file: '\input\training_model_2025-03-19 09-23-13.973331\gb\energy\ohe.pkl'
-energy_cleaned_columns_file: '\input\training_model_2025-03-19 09-23-13.973331\gb\energy\cleaned_columns.json'
-energy_scaler_X_file: '\input\training_model_2025-03-19 09-23-13.973331\gb\energy\model_training\scaler_X.pkl'
-energy_scaler_y_file: '\input\training_model_2025-03-19 09-23-13.973331\gb\energy\model_training\scaler_y.pkl'
-energy_features_file: '\input\training_model_2025-03-19 09-23-13.973331\gb\energy\feature_selection\feature_selection.json'
+energy_ohe_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/energy/ohe.pkl'
+energy_cleaned_columns_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/energy/cleaned_columns.json'
+energy_scaler_X_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/energy/model_training/scaler_X.pkl'
+energy_scaler_y_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/energy/model_training/scaler_y.pkl'
+energy_features_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/energy/feature_selection/feature_selection.json'
 
 # Costing files for MidriseApartment - Toronto
-costing_trained_model_file: '\input\training_model_2025-03-19 09-23-13.973331\gb\costing\model_training\trained_model_gb.joblib'
-costing_ohe_file: '\input\training_model_2025-03-19 09-23-13.973331\gb\costing\ohe.pkl'
-costing_cleaned_columns_file: '\input\training_model_2025-03-19 09-23-13.973331\gb\costing\cleaned_columns.json'
-costing_scaler_X_file: '\input\training_model_2025-03-19 09-23-13.973331\gb\costing\model_training\scaler_X.pkl'
-costing_scaler_y_file: '\input\training_model_2025-03-19 09-23-13.973331\gb\costing\model_training\scaler_y.pkl'
-costing_features_file: '\input\training_model_2025-03-19 09-23-13.973331\gb\costing\feature_selection\feature_selection.json'
+costing_trained_model_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/costing/model_training/trained_model_gb.joblib'
+costing_ohe_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/costing/ohe.pkl'
+costing_cleaned_columns_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/costing/cleaned_columns.json'
+costing_scaler_X_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/costing/model_training/scaler_X.pkl'
+costing_scaler_y_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/costing/model_training/scaler_y.pkl'
+costing_features_file: '/home/btap_ml/input/training_model_2025-03-19 09-23-13.973331/gb/costing/feature_selection/feature_selection.json'
