Unified deployment: Add Retrofit Planner module alongside Surrogate Model
- Integrated Retrofit Planner routes under /retrofit/* prefix
- Merged requirements for both modules (added LightGBM, CatBoost, Excel libs)
- Updated Dockerfile.aws to include New Model directory
- Created frontend page for CSV upload and predictions
- Updated hub.html to show Retrofit Planner as active module
- Both modules share same infrastructure and container
- API endpoints: /surrogate_model/* and /retrofit/*

--- a/Dockerfile.aws
+++ b/Dockerfile.aws
@@ -16,14 +16,20 @@ WORKDIR /home/btap_ml
 
 COPY requirements.txt ./
 COPY src ./src
+COPY input ./input
+
+# Copy New Model (Retrofit Planner) files
+COPY "New Model/src" ./New_Model/src/
+COPY "New Model/data" ./New_Model/data/
+COPY "New Model/output" ./New_Model/output/
 
 RUN pip install setuptools==65.5.1 packaging==21.3
 RUN pip install -r requirements.txt
 
-RUN mkdir output
-RUN mkdir input
-
-COPY input ./input
+RUN mkdir -p output
+RUN mkdir -p input
+RUN mkdir -p New_Model/output/models
+RUN mkdir -p New_Model/data
 WORKDIR /home/btap_ml/src
 
 RUN pip3 install "pydantic[dotenv]"
