--- a/Dockerfile.aws
+++ b/Dockerfile.aws
@@ -18,10 +18,10 @@ COPY requirements.txt ./
 COPY src ./src
 COPY input ./input
 
-# Copy New Model (Retrofit Planner) files
-COPY "New Model/src" ./New_Model/src/
-COPY "New Model/data" ./New_Model/data/
-COPY "New Model/output" ./New_Model/output/
+# Copy New Model (Retrofit Planner) files using array syntax
+COPY ["New Model/src", "./New_Model/src/"]
+COPY ["New Model/data", "./New_Model/data/"]
+COPY ["New Model/output", "./New_Model/output/"]
 
 RUN pip install setuptools==65.5.1 packaging==21.3
 RUN pip install -r requirements.txt
