--- a/Dockerfile.aws
+++ b/Dockerfile.aws
@@ -18,17 +18,15 @@ COPY requirements.txt ./
 COPY src ./src
 COPY input ./input
 
-# Copy New Model (Retrofit Planner) files using array syntax
-COPY ["New Model/src", "./New_Model/src/"]
-COPY ["New Model/data", "./New_Model/data/"]
-
 RUN pip install setuptools==65.5.1 packaging==21.3
 RUN pip install -r requirements.txt
 
+# Create directory structure for both modules
 RUN mkdir -p output
 RUN mkdir -p input
-RUN mkdir -p New_Model/output/models
+RUN mkdir -p New_Model/src
 RUN mkdir -p New_Model/data
+RUN mkdir -p New_Model/output/models
 WORKDIR /home/btap_ml/src
 
 RUN pip3 install "pydantic[dotenv]"
