--- a/Dockerfile.aws
+++ b/Dockerfile.aws
@@ -25,8 +25,8 @@ RUN pip install -r requirements.txt
 RUN mkdir -p output
 RUN mkdir -p input
 
-# Copy retrofit_planner directory (trained models and prediction code)
-COPY ["retrofit_planner", "./retrofit_planner"]
+# Copy New Model directory if available (from git submodule)
+COPY ["New Model", "./New_Model"]
 
 WORKDIR /home/btap_ml/src
 
