--- a/Dockerfile.aws
+++ b/Dockerfile.aws
@@ -25,8 +25,8 @@ RUN pip install -r requirements.txt
 RUN mkdir -p output
 RUN mkdir -p input
 
-# Copy New Model directory if available (from git submodule)
-COPY ["New Model", "./New_Model"]
+# Copy retrofit_planner directory with trained models
+COPY retrofit_planner ./retrofit_planner
 
 WORKDIR /home/btap_ml/src
 
