--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 # --- ML app requirements for Surrogate Model ---
-keras==2.8.0
+keras>=2.15.0
 keras_tuner==1.1.2
 kfp==1.8.6
 kfp_pipeline_spec==0.1.16
 matplotlib==3.4.1
 minio==5.0.10
-numpy==1.24.0
+numpy>=2.0.0
 pandas==1.4.2
 plotly==5.10.0
 scikit_learn==1.1.1
 seaborn==0.11.2
-tensorboard==2.8.0
+tensorboard>=2.15.0
 typer==0.4.1
 xgboost==2.1.4
 openpyxl==3.0.9
