--- a/Dockerfile.aws
+++ b/Dockerfile.aws
@@ -1,12 +1,11 @@
-FROM tensorflow/tensorflow:2.15.0
+FROM python:3.9-slim
 
 RUN apt-get update && apt-get install -y \
-    python3-pip \
     build-essential \
     libssl-dev \
     libffi-dev \
-    python3-dev \
-    git
+    git \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN python3 -m pip install --no-cache-dir --upgrade pip setuptools wheel
 
