--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
-# --- ML app requirements for Surrogate Model ---
-# Note: TensorFlow 2.15.0 includes keras and tensorboard
-keras_tuner==1.1.2
-kfp==1.8.6
-kfp_pipeline_spec==0.1.16
-matplotlib>=3.5.0
+# --- ML app requirements (XGBoost/Gradient Boosting models) ---
+# Note: Both surrogate and retrofit models use gradient boosting, NOT TensorFlow
+joblib>=1.1.0
+matplotlib==3.4.1
 minio==5.0.10
-numpy>=2.0.0
-pandas>=2.0.0
+numpy==1.24.0
+pandas==1.4.2
 plotly==5.10.0
-scikit-learn>=1.3.0
+scikit-learn==1.1.1
 seaborn==0.11.2
 typer==0.4.1
 xgboost==2.1.4
 openpyxl==3.0.9
-pyarrow>=10.0.0
+pyarrow==7.0.0
 pydantic==1.9.2
 myst-parser==2.0.0
 sphinx==7.1.2
