--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 # --- ML app requirements (XGBoost/Gradient Boosting models) ---
 # Note: Both surrogate and retrofit models use gradient boosting, NOT TensorFlow
 joblib>=1.1.0
-matplotlib==3.4.1
+matplotlib>=3.5.0
 minio==5.0.10
-numpy==1.24.0
-pandas==1.4.2
+numpy>=2.0.0
+pandas>=2.0.0
 plotly==5.10.0
-scikit-learn==1.1.1
-seaborn==0.11.2
+scikit-learn>=1.3.0
+seaborn>=0.12.0
 typer==0.4.1
 xgboost==2.1.4
 openpyxl==3.0.9
-pyarrow==7.0.0
-pydantic==1.9.2
+pyarrow>=10.0.0
+pydantic>=1.10.0
 myst-parser==2.0.0
 sphinx==7.1.2
 sphinx-intl==2.0.1
