Fix: Update openpyxl to >=3.1.0 for pandas compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ scikit-learn>=1.3.0
 seaborn>=0.12.0
 typer==0.4.1
 xgboost==2.1.4
-openpyxl==3.0.9
+openpyxl>=3.1.0
 pyarrow>=10.0.0
 pydantic>=1.10.0
 myst-parser==2.0.0
