--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-# --- ML app requirements (XGBoost/Gradient Boosting models) ---
-# Note: Both surrogate and retrofit models use gradient boosting, NOT TensorFlow
+# --- ML app requirements (XGBoost/Gradient Boosting models + TensorFlow for surrogate model) ---
 joblib>=1.1.0
 matplotlib>=3.5.0
 minio==5.0.10
-numpy>=2.0.0
-pandas>=2.0.0
+numpy>=1.23.5,<2.0.0
+pandas>=1.5.0,<3.0.0
 plotly==5.10.0
 scikit-learn>=1.3.0
 seaborn>=0.12.0
@@ -19,6 +18,11 @@ sphinx-intl==2.0.1
 sphinx-autodoc-typehints==1.12.0
 pre-commit==2.15.0
 requests==2.28.2
+
+# TensorFlow for surrogate model
+tensorflow>=2.15.0,<2.16.0
+protobuf>=3.20.0,<5.0.0
+h5py>=3.8.0
 
 # --- FastAPI and Web Framework Dependencies ---
 async-timeout==5.0.1
