--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ minio==5.0.10
 numpy>=1.23.5,<2.0.0
 pandas>=1.5.0,<3.0.0
 plotly==5.10.0
-scikit-learn>=1.3.0
+scikit-learn==1.2.2
 seaborn>=0.12.0
 typer==0.4.1
 xgboost==2.1.4
